fix overflow

--- a/website/style.css
+++ b/website/style.css
@@ -61,7 +61,8 @@ nav #overflow {
     padding-top: calc(var(--nav_padding) + 2.8em);
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 nav #overflow > * {
